# cryptoChainAnalyzer

./: .coveragerc  .env  .gitignore  .pylintrc  README.md  database.db  eka.txt  kolmas.txt  output.txt  pyproject.toml  tasks.py
documentation/: architecture.md  specification.md  testing.md  timekeeping.md  usage.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/week2/Maksukortti/: pyproject.toml  tasks.py
laskarit/week2/Maksukortti/src/: maksukortti.py
laskarit/week2/Maksukortti/src/tests/: maksukortti_test.py
laskarit/week2/unicafe/: .coverage  pyproject.toml
laskarit/week2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
repository/: contract_repository.py
src/: app.py  config.py  database_connection.py  initialize_database.py
src/api/: caller.py
src/entities/: contract.py  transaction.py
src/logic/: chain_analytics_service.py  transaction_analyzer.py
src/repository/: contract_repository.py  transaction_repository.py
src/tests/: __init__.py  caller_test.py
src/tests/api/: caller_test.py
src/tests/logic/: chain_analytics_service_test.py
src/tests/repository/: transaction_repository_test.py
src/ui/: menu.py  new_transactions_view.py  saved_contracts_view.py  text_ui.py  ui.py
stuff/: file.txt
