[tool.poetry]
name = "cryptoChainAnalyzer"
version = "0.1.0"
description = ""
authors = ["Tuukka Tuomikoski <tuukka.tuomikoski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
invoke = "^1.6.0"
etherscan-python = "^2.1.0"
pylint = "^2.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
pytest-dotenv = "^0.5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
