[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["Tuukka Tuomikoski <tuukka.tuomikoski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
